First Controller and Razor pages tests

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
     ViewData["Title"] = "About";
+    
 }
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
+<h4 style="color:blue;">@ViewData["Email"]</h4>
+
 
 <p>Use this area to provide additional information.</p>
+
+<h4 style="color:blue;">@ViewData["Email"]</h4>
+  
