--- a/Views/Sellers/Index.cshtml
+++ b/Views/Sellers/Index.cshtml
@@ -1,8 +1,53 @@
-﻿
+﻿@model IEnumerable<Seller>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Sellers";
 }
 
-<h2>Sellers</h2>
+<h2>@ViewData["Title"]</h2>
 <p>Sellers Index Page</p>
+<table class="table table-striped table-hover" >
+    <thead>
+        <tr class="success">
+            <th>
+                @Html.DisplayNameFor(p => p.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(p => p.Email)
+            </th>
+            <th>
+                @Html.DisplayNameFor(p => p.BirthDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(p => p.BaseSalary)
+            </th>
+            <th >Edit</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+
+        <tr>
+            <td>
+                @Html.DisplayFor(itemapelido => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(itemapelido => item.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(itemapelido => item.BirthDate)
+            </td>
+            <td>
+                @{ <p>@item.BaseSalary.ToString("F2",System.Globalization.CultureInfo.InvariantCulture) </p>      }
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Edit</a>
+            </td>
+        </tr>
+	    }
+    </tbody> 
+</table>
+
 
