--- a/Views/Sellers/Index.cshtml
+++ b/Views/Sellers/Index.cshtml
@@ -12,6 +12,9 @@
     <thead>
         <tr class="success">
             <th>
+                @Html.DisplayNameFor(p => p.Id)
+            </th>
+            <th>
                 @Html.DisplayNameFor(p => p.Name)
             </th>
             <th>
@@ -23,7 +26,7 @@
             <th>
                 @Html.DisplayNameFor(p => p.BaseSalary)
             </th>
-            <th >Edit</th>
+            <th>Edit</th>
         </tr>
     </thead>
     <tbody>
@@ -31,6 +34,9 @@
         {
 
         <tr>
+            <td>
+                @Html.DisplayFor(itemapelido => item.Id)
+            </td>
             <td>
                 @Html.DisplayFor(itemapelido => item.Name)
             </td>
@@ -41,7 +47,7 @@
                 @Html.DisplayFor(itemapelido => item.BirthDate)
             </td>
             <td>
-                @{ <p>@item.BaseSalary.ToString("F2",System.Globalization.CultureInfo.InvariantCulture) </p>      }
+                @Html.DisplayFor(itemapelido => item.BaseSalary)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
