--- a/Views/SalesRecords/Index.cshtml
+++ b/Views/SalesRecords/Index.cshtml
@@ -11,11 +11,11 @@
                 <div class="form-group">
                     <label for="minDate" class="col-lg-2 control-label">Min Date</label>
                     <div class="col-lg-10">
-                        <input type="date" name="minDate" class="form-control" />
+                        <input type="date" name="minDate" class="form-control" value=@ViewData["minDate"]/>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="maxDate" class="col-lg-2 control-label">Max Date</label>
+                    <label for="maxDate" class="col-lg-2 control-label" value=@ViewData["maxDate"]>Max Date</label>
                     <div class="col-lg-10">
                         <input type="date" name="maxDate" class="form-control" />
                     </div>
